--- a/flaskblog/templates/account.html
+++ b/flaskblog/templates/account.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-    <div class="content-section">
+<div class="content-section" xmlns="http://www.w3.org/1999/html">
       <div class="media">
         <img class="rounded-circle account-img" src="{{ image_file }}">
         <div class="media-body">
@@ -8,7 +8,7 @@
           <p class="text-secondary">{{ current_user.email }}</p>
         </div>
       </div>
-      <form method="POST" action="">
+      <form method="POST" action="" enctype="multipart/form-data">
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Account Info</legend>
@@ -36,6 +36,15 @@
                         </div>
                     {% else %}
                         {{ form.email(class="form-control form-control-lg") }}
+                    {% endif %}
+                </div>
+                <div class="form-group">
+                    {{ form.picture.label() }}
+                    {{ form.picture(class="form-control-file") }}
+                    {% if form.picture.errors %}
+                        {% for error in form.picture.errors %}
+                            <span class="text-danger">{{ error }}</span></br>
+                        {% endfor%}
                     {% endif %}
                 </div>
             </fieldset>
