--- a/flaskblog/templates/post.html
+++ b/flaskblog/templates/post.html
@@ -6,6 +6,15 @@
             <div class="article-metadata">
               <a class="mr-2" href="#">{{ post.author.username }}</a>
               <small class="text-muted">{{ post.date_posted.strftime('%Y-%m-%d') }}</small>
+                {% if post.author == current_user %}
+                    <div>
+                        <a class="btn btn-secondary btn-sm mt-1 nb-1" href="{{ url_for('update_post', post_id=post.id) }}">Update</a>
+<!--                        <button type="button" class="btn btn-danger btn-sm m-1">Delete</button>-->
+                        <form action="{{ url_for('delete_post', post_id=post.id) }}" method="POST">
+                            <input class="btn btn-danger btn-sm m-1" type="submit" value="Delete">
+                        </form>
+                    </div>
+                {% endif %}
             </div>
             <h2 class="article-title">{{ post.title }}</h2>
             <p class="article-content">{{ post.content }}</p>
