--- a/flaskblog/templates/home.html
+++ b/flaskblog/templates/home.html
@@ -13,4 +13,7 @@
             </div>
         </article>
     {% endfor %}
+    {% for page_num in posts.iter_pages() %}
+        <a class="btn btn-outline-info mb-4" href="{{ url_for('home', page=page_num) }}">{{page_num}}</a>
+    {% endfor %}
 {% endblock content %}
