--- a/flaskblog/templates/post.html
+++ b/flaskblog/templates/post.html
@@ -8,9 +8,9 @@
               <small class="text-muted">{{ post.date_posted.strftime('%Y-%m-%d') }}</small>
                 {% if post.author == current_user %}
                     <div>
-                        <a class="btn btn-secondary btn-sm mt-1 nb-1" href="{{ url_for('update_post', post_id=post.id) }}">Update</a>
+                        <a class="btn btn-secondary btn-sm mt-1 nb-1" href="{{ url_for('posts.update_post', post_id=post.id) }}">Update</a>
 <!--                        <button type="button" class="btn btn-danger btn-sm m-1">Delete</button>-->
-                        <form action="{{ url_for('delete_post', post_id=post.id) }}" method="POST">
+                        <form action="{{ url_for('posts.delete_post', post_id=post.id) }}" method="POST">
                             <input class="btn btn-danger btn-sm m-1" type="submit" value="Delete">
                         </form>
                     </div>
